--- a/abandoned-by-customer.html
+++ b/abandoned-by-customer.html
@@ -361,9 +361,9 @@
                         class="flex flex-col justify-between gap-3 p-6 bg-white shadow md:gap-6 lg:flex-row main-div rounded-2xl">
                         <!-- KPI Cards -->
                         <div
-                            class="flex flex-col w-full gap-6 overflow-x-auto justify-center lg:max-w-[400px] text-fonts">
+                            class="flex flex-col w-full gap-6  justify-center lg:max-w-[400px] text-fonts">
                             <div
-                                class="flex items-center justify-center w-full h-full transition-transform bg-white shadow rounded-xl hover:scale-100">
+                                class="flex items-center justify-center w-full p-4 transition-transform duration-200 bg-white shadow rounded-xl md:p-8 hover:shadow-lg hover:scale-105 md:w-auto">
                                 <div id="bar-containersd" class="w-full "></div>
                             </div>
                         </div>
