refactor the code

--- a/document-breakdown.html
+++ b/document-breakdown.html
@@ -357,8 +357,12 @@
                         </div>
                     </div>
 
-                    <div class="p-2 bg-white border border-gray-200 shadow-sm md:p-6 rounded-2xl">
-                        <div id="document-breakdown-chart" class="w-full"></div>
+                
+                    <div class="p-2 bg-white border-gray-200 shadow-sm md:p-6 rounded-2xl dash-bordee">
+                        <div
+                            class="w-full max-w-5xl p-0 mx-auto bg-white border border-gray-200 shadow-sm md:p-6 rounded-2xl dash-bordee">
+                            <div id="document-breakdown-chart" class="w-full"></div>
+                        </div>
                     </div>
                 </div>
             </main>
