--- a/verification-failure.html
+++ b/verification-failure.html
@@ -362,11 +362,11 @@
                         <!-- Tabs -->
                         <div class="flex gap-2 mb-6">
                             <button
-                                class="px-3 py-2 font-semibold text-blue-600 bg-white border-b-2 border-blue-600 rounded-t-lg shadow md:px-6 md:py-4">
+                                class="px-3 py-2 font-semibold text-blue-600 bg-white border-b-2 border-blue-600 rounded-t-lg shadow md:px-6 md:py-2">
                                 Success Rate
                             </button>
                             <a href="#"
-                                class="px-3 py-2 text-gray-500 bg-gray-100 border-b-2 border-transparent rounded-t-lg md:px-6 md:py-4 hover:text-blue-600">
+                                class="px-3 py-2 text-gray-500 bg-gray-100 border-b-2 border-transparent rounded-t-lg md:px-6 md:py-2 hover:text-blue-600">
                                 Transactions Monitoring
                             </a>
                         </div>
@@ -381,10 +381,10 @@
 
                             <!-- Pie Chart Card -->
                             <div
-                                class="relative bg-white w-full rounded-[40px] p-0 md:p-6 flex-1 min-[350px] md:min-h-[550px] justify-normal items-center overflow-hidden border border-transparent transition transform">
+                                class="relative bg-white w-full p-0 md:p-6 flex-1 min-[350px] md:min-h-[550px] justify-normal items-center overflow-hidden border border-transparent transition transform rounded">
                                 Animated grid background
                                 <div
-                                    class="absolute inset-0 bg-[length:40px_40px] bg-[linear-gradient(rgba(0,212,255,0.03)_1px,transparent_1px),linear-gradient(90deg,rgba(0,212,255,0.03)_1px,transparent_1px)] rounded-[40px] animate-[gridMove_20s_linear_infinite]">
+                                    class="absolute inset-0 bg-[length:40px_40px] bg-[linear-gradient(rgba(0,212,255,0.03)_1px,transparent_1px),linear-gradient(90deg,rgba(0,212,255,0.03)_1px,transparent_1px)] animate-[gridMove_20s_linear_infinite]">
                                 </div>
                                 <!-- Orbs -->
                                 <div
@@ -395,7 +395,7 @@
                                 </div>
                                 <!-- Glass overlay -->
                                 <div
-                                    class="absolute inset-0 bg-white/5 backdrop-blur-[30px] rounded-[40px] border border-white/5">
+                                    class="absolute inset-0 bg-white/5 backdrop-blur-[30px] rounded border border-white/5">
                                 </div>
                                 <!-- Pie Chart Container -->
                                 <div id="pies-chart"
