--- a/id-breakdown.html
+++ b/id-breakdown.html
@@ -356,8 +356,10 @@
                             </button>
                         </div>
                     </div>
-                    <div class="p-2 bg-white border border-gray-200 shadow-sm md:p-6 rounded-2xl">
-                        <div id="id-breakdown-chart" class="w-full"></div>
+                    <div class="p-2 bg-white border-gray-200 shadow-sm md:p-6 rounded-2xl dash-bordee">
+                        <div class="w-full max-w-5xl p-6 mx-auto bg-white border border-gray-200 shadow-sm rounded-2xl dash-bordee">
+                            <div id="id-breakdown-chart" class="w-full"></div>
+                        </div>
                     </div>
                 </div>
             </main>
