--- a/average-response-time.html
+++ b/average-response-time.html
@@ -324,9 +324,7 @@
             </header>
 
             <main class="flex-1 p-[20px] md:p-6 overflow-y-auto font-sans bg-gray-50">
-
                 <div>
-
                     <div class="flex flex-col gap-6 mb-6 md:flex-row md:items-center md:justify-between">
                         <!-- Left Section: Heading -->
                         <div>
@@ -395,10 +393,10 @@
                         </div>
 
                         <!-- Grid Layout -->
-                        <div class="grid grid-cols-1 gap-6 md:grid-cols-2">
+                        <div class="grid grid-cols-1 gap-4 md:grid-cols-2 md:gap-6">
                             <!-- KPI Card -->
                             <div
-                                class="flex flex-col items-center justify-center p-4 bg-white rounded-lg shadow md:p-6">
+                                class="flex flex-col items-center justify-center h-full p-4 bg-white border rounded-lg dash-bordee md:p-6">
                                 <div class="flex items-center justify-center mb-2">
                                     <span class="mr-3 text-2xl font-bold text-green-600 md:text-4xl">35 sec</span>
                                     <span class="px-2 py-1 text-sm font-semibold text-green-700 bg-green-100 rounded">vs
@@ -420,7 +418,8 @@
                             </div>
 
                             <!-- Chart + Legend -->
-                            <div class="p-0 bg-white rounded-lg shadow md:p-6">
+                            <div
+                                class="flex flex-col items-center h-full px-0 py-1 bg-white border rounded-lg md:p-6 dash-bordee">
                                 <div id="response-time-chart" class="w-full h-[350px]"></div>
                                 <div
                                     class="flex flex-col flex-wrap items-stretch justify-center w-full px-2 mt-4 sm:flex-row sm:gap-4">
