--- a/success-rate.html
+++ b/success-rate.html
@@ -370,8 +370,7 @@
                     <!-- Metric Cards -->
                     <div class="grid grid-cols-1 gap-6 mt-5 mb-6 md:grid-cols-2">
                         <!-- Completion Rate -->
-                        <div
-                            class="border-l-4 border-l-[#4CAF50] p-5 flex flex-col min-h-[140px] bg-white rounded-xl shadow-sm">
+                        <div class=" dash-bordee p-5 flex flex-col min-h-[140px] bg-white  rounded-xl shadow-sm">
                             <div class="flex-1">
                                 <h3 class="text-sm font-medium text-gray-500">Completion Rate</h3>
                                 <div class="flex items-baseline gap-2 mt-2">
@@ -379,7 +378,8 @@
                                 </div>
                             </div>
                             <div class="pt-3 mt-3 border-t border-gray-100">
-                                <div class="flex items-center justify-between p-3 mt-2 -mx-5 -mb-5 bg-gray-50">
+                                <div
+                                    class="flex items-center justify-between p-3 mt-2 -mx-5 -mb-5 bg-gray-50 rounded-xl">
                                     <span class="text-xs text-gray-500">Avg. Rate</span>
                                     <div class="w-3/4 h-2 overflow-hidden bg-green-100 rounded-full">
                                         <div class="h-full bg-[#4CAF50]" style="width: 72%"></div>
@@ -389,8 +389,7 @@
                         </div>
 
                         <!-- Onboarding Time -->
-                        <div
-                            class="border-l-4 border-l-[#2196F3] p-5 flex flex-col min-h-[140px] bg-white rounded-xl shadow-sm">
+                        <div class="dash-bordee p-5 flex flex-col min-h-[140px] bg-white rounded-xl shadow-sm">
                             <div class="flex-1">
                                 <h3 class="text-sm font-medium text-gray-500">Average Onboarding Time</h3>
                                 <div class="flex items-baseline gap-2 mt-2">
@@ -398,7 +397,8 @@
                                 </div>
                             </div>
                             <div class="pt-3 mt-3 border-t border-gray-100">
-                                <div class="flex items-center justify-between p-3 mt-2 -mx-5 -mb-5 bg-gray-50">
+                                <div
+                                    class="flex items-center justify-between p-3 mt-2 -mx-5 -mb-5 bg-gray-50 rounded-xl">
                                     <span class="text-xs text-gray-500">Avg. Rate</span>
                                     <div class="w-3/4 h-2 overflow-hidden bg-blue-100 rounded-full">
                                         <div class="h-full bg-[#2196F3]" style="width: 35%"></div>
@@ -411,10 +411,11 @@
                     <!-- Charts -->
                     <div>
                         <!-- Success View -->
-                        <div id="view-success" class="grid grid-cols-1 gap-3 space-y-6 md:gap-6 view-pane lg:grid-cols-2">
+                        <div id="view-success"
+                            class="grid grid-cols-1 gap-3 space-y-6 md:gap-6 view-pane lg:grid-cols-2">
                             <!-- Pie Chart Card -->
                             <div
-                                class="relative bg-white rounded-3xl p-0 md:p-12 min-h-[350px] md:min-h-[550px] overflow-hidden border border-gray-100 transition-all">
+                                class="relative p-0 overflow-hidden transition-all bg-white border border-gray-100 rounded-3xl md:p-6">
                                 <div
                                     class="absolute inset-0 bg-[length:40px_40px] bg-[linear-gradient(rgba(0,212,255,0.03)_1px,transparent_1px),linear-gradient(90deg,rgba(0,212,255,0.03)_1px,transparent_1px)] animate-[gridMove_20s_linear_infinite] rounded-3xl">
                                 </div>
@@ -441,7 +442,7 @@
 
                             <!-- ✅ Updated Bar Chart Container -->
                             <div id="failureBarCharts"
-                                class="bg-white rounded-xl p-0 md:p-6 shadow min-h-[350px] flex items-center justify-center">
+                                class="flex items-center justify-center p-0 mt-0 bg-white shadow rounded-xl md:p-6">
                             </div>
                         </div>
 
