--- a/video-call-waiting.html
+++ b/video-call-waiting.html
@@ -329,8 +329,8 @@
                     <div class="flex flex-col gap-6 mb-6 md:flex-row md:items-center md:justify-between">
                         <!-- Left Section: Heading -->
                         <div>
-                            <h1 class="text-2xl font-bold text-gray-800">Document Breakdown</h1>
-                            <p class="text-gray-500">Analysis of document types submitted for verification</p>
+                            <h1 class="text-2xl font-bold text-gray-800">Video Call Waiting (SLA)</h1>
+                            <p class="text-gray-500">Analysis of video call waiting times</p>
                         </div>
 
                         <!-- Right Section: Date Range Picker -->
