--- a/average-response-time.html
+++ b/average-response-time.html
@@ -328,8 +328,8 @@
                     <div class="flex flex-col gap-6 mb-6 md:flex-row md:items-center md:justify-between">
                         <!-- Left Section: Heading -->
                         <div>
-                            <h1 class="text-2xl font-bold text-gray-800">Verification Time (SLA)</h1>
-                            <p class="text-gray-500">Analysis of verification processing times</p>
+                            <h1 class="text-2xl font-bold text-gray-800">Average Response Time</h1>
+                            <p class="text-gray-500">Analysis of system response times for document processing</p>
                         </div>
 
                         <!-- Right Section: Date Range Picker -->
