--- a/country-distribution.html
+++ b/country-distribution.html
@@ -328,7 +328,7 @@
                         <!-- Left Section: Heading -->
                         <div>
                             <h1 class="text-2xl font-bold text-gray-800">Country Distribution (ID)</h1>
-                            <p class="text-gray-500">Analysis of verification processing times</p>
+                            <p class="text-gray-500">Geographic distribution of identification documents</p>
                         </div>
 
                         <!-- Right Section: Date Range Picker -->
