--- a/overall-success.html
+++ b/overall-success.html
@@ -308,6 +308,7 @@
                 </a>
             </nav>
         </div>
+
         <!-- Main content -->
         <div class="flex flex-col flex-1 h-full overflow-hidden">
             <!-- Mobile Header -->
@@ -360,7 +361,7 @@
 
 
                     <div
-                        class="flex flex-col justify-between gap-6 p-6 bg-white shadow lg:flex-row main-div rounded-2xl">
+                        class="flex flex-col justify-between gap-6 p-3 bg-white shadow md:p-6 lg:flex-row main-div rounded-2xl">
                         <!-- KPI Cards -->
                         <div class="flex flex-col gap-6 left-card text-fonts w-full lg:max-w-[400px] lg:min-w-[400px]">
                             <div>
@@ -388,9 +389,9 @@
                         </div>
 
                         <!-- Chart Card -->
-                        <div class="relative w-full">
-                            <div id="pie-chart-container"
-                                class="w-full max-w-[700px] h-[350px] sm:h-[350px] lg:h-[500px] mx-auto"></div>
+                        <div
+                            class="w-full max-w-[700px] h-[350px] sm:h-[350px] lg:h-[500px]  relative flex justify-normal items-center">
+                            <div id="pie-chart-container"></div>
                         </div>
                     </div>
 
