--- a/mobile-devices.html
+++ b/mobile-devices.html
@@ -358,12 +358,12 @@
                         </div>
                     </div>
 
-                    <div class="grid grid-cols-1 gap-8 lg:grid-cols-2 dashboard-container">
+                    <div class="grid grid-cols-1 gap-8 lg:grid-cols-2 dashboard-container dash-bordee">
                         <!-- Android Devices Table -->
                         <div>
                             <h3 class="mb-4 text-lg font-medium text-center">Android Devices (594 total)</h3>
                             <div class="overflow-hidden border border-gray-200 rounded-lg">
-                                <table class="min-w-full text-sm divide-y divide-gray-200">
+                                <table class="min-w-full text-sm divide-y divide-gray-200 dash-bordee">
                                     <thead class="bg-gray-100">
                                         <tr>
                                             <th
@@ -377,7 +377,7 @@
                                                 % started</th>
                                         </tr>
                                     </thead>
-                                    <tbody class="bg-white divide-y divide-gray-200">
+                                    <tbody class="bg-white divide-y divide-gray-200 dash-bordee">
                                         <tr class="bg-white">
                                             <td class="px-4 py-3">Redmi 9A</td>
                                             <td class="px-4 py-3">24</td>
@@ -427,7 +427,7 @@
                         <div>
                             <h3 class="mb-4 text-lg font-medium text-center">iOS Devices (268 total)</h3>
                             <div class="overflow-hidden border border-gray-200 rounded-lg">
-                                <table class="min-w-full text-sm divide-y divide-gray-200">
+                                <table class="min-w-full text-sm divide-y divide-gray-200 dash-bordee">
                                     <thead class="bg-gray-100">
                                         <tr>
                                             <th
@@ -440,8 +440,8 @@
                                                 class="px-4 py-3 font-medium tracking-wider text-left text-gray-500 uppercase">
                                                 % started</th>
                                         </tr>
-                                    </thead>
-                                    <tbody class="bg-white divide-y divide-gray-200">
+                                    </thead> 
+                                    <tbody class="bg-white divide-y divide-gray-200 dash-bordee">
                                         <tr class="bg-white">
                                             <td class="px-4 py-3">iPhone 11</td>
                                             <td class="px-4 py-3">46</td>
