add changes in the pixel perfect design

--- a/detailed-transactions.html
+++ b/detailed-transactions.html
@@ -334,7 +334,7 @@
                         </div>
 
                         <!-- Right Section: Date Range Picker -->
-                        <div class="w-full time-period-container md:w-auto">
+                        <div class="w-full time-period-container md:w-auto ">
                             <label class="hidden mb-2 md:block md:mb-1">Define Time Period:</label>
 
                             <!-- Dates Wrapper -->
@@ -359,7 +359,7 @@
                     </div>
                 </div>
 
-                <div class="w-full p-8 bg-white rounded-lg shadow">
+                <div class="w-full p-8 bg-white rounded-lg shadow dash-bordee">
 
                     <!-- Content Section -->
                     <div class="flex flex-col items-center justify-center min-h-[500px] w-full">
