--- a/transactions.html
+++ b/transactions.html
@@ -357,7 +357,7 @@
           <!-- Metric Cards -->
           <div class="grid grid-cols-1 gap-6 mt-5 mb-6 md:grid-cols-2">
             <!-- Card 1 -->
-            <div class="border-l-4 border-l-[#2196F3] p-5 flex flex-col min-h-[140px] bg-white rounded-xl shadow-sm">
+            <div class=" p-5 flex flex-col min-h-[140px] bg-white rounded-xl shadow-sm dash-bordee">
               <div class="flex-1">
                 <h3 id="stat-title-1" class="font-medium text-gray-500 text-md"></h3>
                 <div class="flex items-baseline gap-2 mt-2">
@@ -365,7 +365,7 @@
                 </div>
                 <div id="stat-target-1" class="text-md text-[#020817] font-normal"></div>
               </div>
-              <div class="pt-3 mt-3 border-t border-gray-100">
+              <div class="pt-3 mt-3 border-t border-gray-100 rounded-xl">
                 <div class="flex items-center justify-between p-3 mt-2 -mx-5 -mb-5 bg-gray-50">
                   <span class="text-xs text-gray-500">Avg. Rate</span>
                   <div class="w-3/4 h-2 overflow-hidden bg-blue-100 rounded-full">
@@ -376,7 +376,7 @@
             </div>
 
             <!-- Card 2 -->
-            <div class="border-l-4 border-l-yellow-500 p-5 flex flex-col min-h-[140px] bg-white rounded-xl shadow-sm">
+            <div class="dash-bordee p-5 flex flex-col min-h-[140px] bg-white rounded-xl shadow-sm">
               <div class="flex-1">
                 <h3 id="stat-title-2" class="font-medium text-gray-500 text-md"></h3>
                 <div class="flex items-baseline gap-2 mt-2">
@@ -384,7 +384,7 @@
                 </div>
                 <div id="stat-target-2" class="text-md text-[#020817] font-normal"></div>
               </div>
-              <div class="pt-3 mt-3 border-t border-gray-100">
+              <div class="pt-3 mt-3 border-t border-gray-100 rounded-xl">
                 <div class="flex items-center justify-between p-3 mt-2 -mx-5 -mb-5 bg-gray-50">
                   <span class="mr-2 text-xs text-gray-500">SLA Compliance</span>
                   <div class="w-3/4 h-2 overflow-hidden bg-yellow-100 rounded-full">
