--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
           <!-- Metric Cards -->
           <div class="grid grid-cols-1 gap-6 mb-6 md:grid-cols-3">
             <!-- Completion Rate Card -->
-            <div class="border-l-4 border-l-green-500 p-5 flex flex-col min-h-[140px] bg-white rounded-xl shadow-sm">
+            <div class="dash-bordee p-5 flex flex-col min-h-[140px] bg-white rounded-xl shadow-sm">
               <div class="flex-1">
                 <h3 class="text-sm font-medium text-gray-500">
                   Completion Rate
@@ -358,7 +358,7 @@
                   </div>
                 </div>
               </div>
-              <div class="pt-3 mt-3 border-t border-gray-100">
+              <div class="pt-3 mt-3 border-t border-gray-100 rounded-xl">
                 <div class="flex items-center justify-between p-3 mt-2 -mx-5 -mb-5 bg-gray-50">
                   <span class="text-xs text-gray-500">Avg. Rate</span>
                   <div class="w-3/4 h-2 overflow-hidden bg-green-100 rounded-full">
@@ -369,7 +369,7 @@
             </div>
 
             <!-- Onboarding Time Card -->
-            <div class="border-l-4 border-l-blue-500 p-5 flex flex-col min-h-[140px] bg-white rounded-xl shadow-sm">
+            <div class="dash-bordee p-5 flex flex-col min-h-[140px] bg-white rounded-xl shadow-sm">
               <div class="flex-1">
                 <h3 class="text-sm font-medium text-gray-500">
                   Average Onboarding Time
@@ -380,7 +380,7 @@
                   </div>
                 </div>
               </div>
-              <div class="pt-3 mt-3 border-t border-gray-100">
+              <div class="pt-3 mt-3 border-t border-gray-100 rounded-xl">
                 <div class="flex items-center justify-between p-3 mt-2 -mx-5 -mb-5 bg-gray-50">
                   <span class="text-xs text-gray-500">Avg. Rate</span>
                   <div class="w-3/4 h-2 overflow-hidden bg-blue-100 rounded-full">
@@ -391,7 +391,7 @@
             </div>
 
             <!-- SLA Compliance Card -->
-            <div class="border-l-4 border-l-yellow-500 p-5 flex flex-col min-h-[140px] bg-white rounded-xl shadow-sm">
+            <div class="dash-bordee p-5 flex flex-col min-h-[140px] bg-white rounded-xl shadow-sm">
               <div class="flex-1">
                 <h3 class="text-sm font-medium text-gray-500">
                   Response Time vs SLA
@@ -401,7 +401,7 @@
                 </div>
                 <p class="mt-2 text-[#020817]">Target: 85% within SLA</p>
               </div>
-              <div class="pt-3 mt-3 border-t border-gray-100">
+              <div class="pt-3 mt-3 border-t border-gray-100 rounded-xl">
                 <div class="flex items-center justify-between p-3 mt-2 -mx-5 -mb-5 bg-gray-50">
                   <span class="mr-2 text-xs text-gray-500">SLA Compliance</span>
                   <div class="w-3/4 h-2 overflow-hidden bg-yellow-100 rounded-full">
@@ -415,7 +415,8 @@
           <!-- Charts -->
           <div class="grid grid-cols-1 gap-6 mb-6 lg:grid-cols-2">
             <!-- Chart Container -->
-            <div class="relative flex items-center justify-center p-0 overflow-hidden bg-white shadow-md md:p-6 rounded-2xl">
+            <div
+              class="relative flex items-center justify-center p-0 overflow-hidden bg-white shadow-md md:p-6 rounded-2xl">
               <!-- Flex container: chart left, legend right -->
               <div class="flex flex-col items-start gap-6 lg:flex-row">
                 <!-- Pie Chart Container -->
