--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                 </div>
               </div>
               <div class="pt-3 mt-3 border-t border-gray-100 rounded-xl">
-                <div class="flex items-center justify-between p-3 mt-2 -mx-5 -mb-5 bg-gray-50">
+                <div class="flex items-center justify-between p-3 mt-2 -mx-5 -mb-5 bg-gray-50 rounded-xl">
                   <span class="text-xs text-gray-500">Avg. Rate</span>
                   <div class="w-3/4 h-2 overflow-hidden bg-green-100 rounded-full">
                     <div class="h-full bg-green-500" style="width: 72%"></div>
@@ -381,7 +381,7 @@
                 </div>
               </div>
               <div class="pt-3 mt-3 border-t border-gray-100 rounded-xl">
-                <div class="flex items-center justify-between p-3 mt-2 -mx-5 -mb-5 bg-gray-50">
+                <div class="flex items-center justify-between p-3 mt-2 -mx-5 -mb-5 bg-gray-50 rounded-xl">
                   <span class="text-xs text-gray-500">Avg. Rate</span>
                   <div class="w-3/4 h-2 overflow-hidden bg-blue-100 rounded-full">
                     <div class="h-full bg-blue-500" style="width: 35%"></div>
@@ -402,7 +402,7 @@
                 <p class="mt-2 text-[#020817]">Target: 85% within SLA</p>
               </div>
               <div class="pt-3 mt-3 border-t border-gray-100 rounded-xl">
-                <div class="flex items-center justify-between p-3 mt-2 -mx-5 -mb-5 bg-gray-50">
+                <div class="flex items-center justify-between p-3 mt-2 -mx-5 -mb-5 bg-gray-50 rounded-xl">
                   <span class="mr-2 text-xs text-gray-500">SLA Compliance</span>
                   <div class="w-3/4 h-2 overflow-hidden bg-yellow-100 rounded-full">
                     <div class="h-full bg-yellow-500" style="width: 55%"></div>
