--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
           <div class="grid grid-cols-1 gap-6 mb-6 lg:grid-cols-2">
             <!-- Chart Container -->
             <div
-              class="relative flex items-center justify-center p-0 overflow-hidden bg-white shadow-md md:p-6 rounded-2xl">
+              class="relative flex flex-col items-center justify-center w-full p-2 mx-auto transition-shadow duration-300 bg-white shadow-sm md:p-6 item rounded-xl hover:shadow-md ">
               <!-- Flex container: chart left, legend right -->
               <div class="flex flex-col items-start gap-6 lg:flex-row">
                 <!-- Pie Chart Container -->
