add changes in the design

--- a/transactions.html
+++ b/transactions.html
@@ -365,8 +365,8 @@
                 </div>
                 <div id="stat-target-1" class="text-md text-[#020817] font-normal"></div>
               </div>
-              <div class="pt-3 mt-3 border-t border-gray-100 rounded-xl">
-                <div class="flex items-center justify-between p-3 mt-2 -mx-5 -mb-5 bg-gray-50">
+              <div class="pt-3 mt-3 border-t border-gray-100 ">
+                <div class="flex items-center justify-between p-3 mt-2 -mx-5 -mb-5 bg-gray-50 rounded-xl">
                   <span class="text-xs text-gray-500">Avg. Rate</span>
                   <div class="w-3/4 h-2 overflow-hidden bg-blue-100 rounded-full">
                     <div id="progress-1" class="h-full bg-[#2196F3]" style="width: 0%"></div>
@@ -384,8 +384,8 @@
                 </div>
                 <div id="stat-target-2" class="text-md text-[#020817] font-normal"></div>
               </div>
-              <div class="pt-3 mt-3 border-t border-gray-100 rounded-xl">
-                <div class="flex items-center justify-between p-3 mt-2 -mx-5 -mb-5 bg-gray-50">
+              <div class="pt-3 mt-3 border-t border-gray-100 ">
+                <div class="flex items-center justify-between p-3 mt-2 -mx-5 -mb-5 bg-gray-50 rounded-xl">
                   <span class="mr-2 text-xs text-gray-500">SLA Compliance</span>
                   <div class="w-3/4 h-2 overflow-hidden bg-yellow-100 rounded-full">
                     <div id="progress-2" class="h-full bg-[#FF9800]" style="width: 0%"></div>
