--- a/abandoned-by-customer.html
+++ b/abandoned-by-customer.html
@@ -360,8 +360,7 @@
                     <div
                         class="flex flex-col justify-between gap-3 p-6 bg-white shadow md:gap-6 lg:flex-row main-div rounded-2xl">
                         <!-- KPI Cards -->
-                        <div
-                            class="flex flex-col w-full gap-6  justify-center lg:max-w-[400px] text-fonts">
+                        <div class="flex flex-col w-full gap-6  justify-center lg:max-w-[400px] text-fonts">
                             <div
                                 class="flex items-center justify-center w-full p-4 transition-transform duration-200 bg-white shadow rounded-xl md:p-8 hover:shadow-lg hover:scale-105 md:w-auto">
                                 <div id="bar-containersd" class="w-full "></div>
@@ -400,14 +399,14 @@
             </main>
 
             <!-- Footer -->
-            <footer class="px-4 py-3 bg-white border-t border-gray-200 footer">
-                <div class="flex flex-col items-start justify-between gap-2 md:flex-row md:items-center">
+            <footer class="px-4 py-1 bg-white border-t border-gray-200 md:py-3 footer">
+                <div class="flex flex-col items-center justify-between gap-1 md:gap-2 md:flex-row md:items-center">
                     <div class="flex flex-wrap items-center gap-2">
                         <i class="fa-regular fa-circle-user text-[#2563EB] text-xl"></i>
                         <span class="text-sm font-semibold">IDBox™ Service Monitoring</span>
                         <span class="text-xs text-gray-500">v.2.1</span>
                     </div>
-                    <div class="text-sm text-left text-gray-500 md:text-right">
+                    <div class="text-sm text-center text-gray-500 md:text-right">
                         © <span id="year"></span> Intelli Group. All rights reserved.
                     </div>
                 </div>
