--- a/mobile-devices.html
+++ b/mobile-devices.html
@@ -440,7 +440,7 @@
                                                 class="px-4 py-3 font-medium tracking-wider text-left text-gray-500 uppercase">
                                                 % started</th>
                                         </tr>
-                                    </thead> 
+                                    </thead>
                                     <tbody class="bg-white divide-y divide-gray-200 dash-bordee">
                                         <tr class="bg-white">
                                             <td class="px-4 py-3">iPhone 11</td>
@@ -517,14 +517,14 @@
                 </div>
             </main>
 
-            <footer class="px-4 py-3 bg-white border-t border-gray-200 footer">
-                <div class="flex flex-col items-start justify-between gap-2 md:flex-row md:items-center">
+            <footer class="px-4 py-1 bg-white border-t border-gray-200 md:py-3 footer">
+                <div class="flex flex-col items-center justify-between gap-1 md:gap-2 md:flex-row md:items-center">
                     <div class="flex flex-wrap items-center gap-2">
                         <i class="fa-regular fa-circle-user text-[#2563EB] text-xl"></i>
                         <span class="text-sm font-semibold">IDBox™ Service Monitoring</span>
                         <span class="text-xs text-gray-500">v.2.1</span>
                     </div>
-                    <div class="text-sm text-left text-gray-500 md:text-right">
+                    <div class="text-sm text-center text-gray-500 md:text-right">
                         © <span id="year"></span> Intelli Group. All rights reserved.
                     </div>
                 </div>
