--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
             </div>
 
             <div class="flex items-center w-full gap-3 time-period-container md:w-auto">
-              <label class="hidden mb-2 md:block md:mb-1">Define Time Period:</label>
+              <label class="hidden mb-2 text-sm font-semibold md:block md:mb-1">Define Time Period:</label>
 
               <!-- Dates Wrapper -->
               <div class="flex flex-row flex-wrap gap-3 date-inputs sm:flex-row sm:items-center">
