--- a/index.html
+++ b/index.html
@@ -329,12 +329,12 @@
               <!-- Dates Wrapper -->
               <div class="flex flex-row flex-wrap gap-3 date-inputs sm:flex-row sm:items-center">
                 <div class="w-full date-wrapper sm:w-auto">
-                  <input type="date" id="from-date" placeholder="From" class="w-full sm:w-auto input-fav" />
+                  <input type="text" id="from-date" placeholder="From" class="w-full sm:w-auto input-fav" />
                   <label for="from-date" class="placeholder-text"></label>
                   <span class="calendar-icon"></span>
                 </div>
                 <div class="w-full date-wrapper sm:w-auto">
-                  <input type="date" id="to-date" placeholder="To" class="w-full sm:w-auto input-fav" />
+                  <input type="text" id="to-date" placeholder="To" class="w-full sm:w-auto input-fav" />
                   <label for="to-date" class="placeholder-text"></label>
                   <span class="calendar-icon"></span>
                 </div>
