--- a/video-call-waiting.html
+++ b/video-call-waiting.html
@@ -335,19 +335,18 @@
 
                         <!-- Right Section: Date Range Picker -->
                         <div class="flex items-center w-full gap-3 time-period-container md:w-auto">
-                            <label class="hidden mb-2 md:block md:mb-1">Define Time Period:</label>
+                            <label class="hidden mb-2 text-sm font-semibold md:block md:mb-1">Define Time
+                                Period:</label>
 
                             <!-- Dates Wrapper -->
                             <div class="flex flex-row flex-wrap gap-3 date-inputs sm:flex-row sm:items-center">
                                 <div class="w-full date-wrapper sm:w-auto">
-                                    <input type="date" id="from-date" placeholder="From"
-                                        class="w-full sm:w-auto input-fav" />
+                                    <input id="from-date" placeholder="From" class="w-full sm:w-auto input-fav" />
                                     <label for="from-date" class="placeholder-text"></label>
                                     <span class="calendar-icon"></span>
                                 </div>
                                 <div class="w-full date-wrapper sm:w-auto">
-                                    <input type="date" id="to-date" placeholder="To"
-                                        class="w-full sm:w-auto input-fav" />
+                                    <input id="to-date" placeholder="To" class="w-full sm:w-auto input-fav" />
                                     <label for="to-date" class="placeholder-text"></label>
                                     <span class="calendar-icon"></span>
                                 </div>
