--- a/abandoned-by-customer.html
+++ b/abandoned-by-customer.html
@@ -339,19 +339,18 @@
 
                         <!-- Right Section: Date Range Picker -->
                         <div class="flex items-center w-full gap-3 time-period-container md:w-auto">
-                            <label class="hidden mb-2 md:block md:mb-1">Define Time Period:</label>
+                            <label class="hidden mb-2 text-sm font-semibold md:block md:mb-1">Define Time
+                                Period:</label>
 
                             <!-- Dates Wrapper -->
                             <div class="flex flex-row flex-wrap gap-3 date-inputs sm:flex-row sm:items-center">
                                 <div class="w-full date-wrapper sm:w-auto">
-                                    <input type="text" id="from-date" placeholder="From"
-                                        class="w-full sm:w-auto input-fav" />
+                                    <input id="from-date" placeholder="From" class="w-full sm:w-auto input-fav" />
                                     <label for="from-date" class="placeholder-text"></label>
                                     <span class="calendar-icon"></span>
                                 </div>
                                 <div class="w-full date-wrapper sm:w-auto">
-                                    <input type="text" id="to-date" placeholder="To"
-                                        class="w-full sm:w-auto input-fav" />
+                                    <input id="to-date" placeholder="To" class="w-full sm:w-auto input-fav" />
                                     <label for="to-date" class="placeholder-text"></label>
                                     <span class="calendar-icon"></span>
                                 </div>
@@ -419,7 +418,7 @@
             </footer>
         </div>
     </div>
-    
+
     <script src="/assets/js/abandoned-customer.js"></script>
     <script src="/assets/js/main.js"></script>
 </body>
