--- a/average-response-time.html
+++ b/average-response-time.html
@@ -5,17 +5,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <link rel="stylesheet" href="./assets/css/main.css" />
+    <link rel="stylesheet" href="https://unpkg.com/react-day-picker@8.7.3/dist/style.css" />
+    <link rel="stylesheet" href="./tailwind.config.js" />
+    <link rel="stylesheet" href="path/to/line-awesome/css/line-awesome-font-awesome.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
         integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="path/to/line-awesome/css/line-awesome-font-awesome.min.css" />
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./assets/css/main.css" />
+    <title>Average Response Time</title>
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/highcharts-3d.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <title>Average Response Time</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://code.highcharts.com/modules/accessibility.js"></script>
 </head>
 
 <body class="h-screen overflow-hidden font-sans">
@@ -369,19 +372,20 @@
                                     Monitoring</button>
                             </div>
                             <!-- Right Section: Date Range Picker -->
-                            <div class="w-full time-period-container md:w-auto">
-                                <label class="hidden mb-2 md:block md:mb-1">Define Time Period:</label>
+                            <div class="flex items-center w-full gap-3 time-period-container md:w-auto">
+                                <label class="hidden mb-2 text-sm font-semibold md:block md:mb-1">Define Time
+                                    Period:</label>
 
                                 <!-- Dates Wrapper -->
                                 <div class="flex flex-row flex-wrap gap-3 date-inputs sm:flex-row sm:items-center">
                                     <div class="w-full date-wrapper sm:w-auto">
-                                        <input type="date" id="from-date" class="w-full sm:w-auto" />
-                                        <label for="from-date" class="placeholder-text">From</label>
+                                        <input id="from-date" placeholder="From" class="w-full sm:w-auto input-fav" />
+                                        <label for="from-date" class="placeholder-text"></label>
                                         <span class="calendar-icon"></span>
                                     </div>
                                     <div class="w-full date-wrapper sm:w-auto">
-                                        <input type="date" id="to-date" class="w-full sm:w-auto" />
-                                        <label for="to-date" class="placeholder-text">To</label>
+                                        <input id="to-date" placeholder="To" class="w-full sm:w-auto input-fav" />
+                                        <label for="to-date" class="placeholder-text"></label>
                                         <span class="calendar-icon"></span>
                                     </div>
                                 </div>
@@ -463,7 +467,6 @@
     </div>
 
     <script src="/assets/js/avg-response-time.js"></script>
-    <script src="https://kit.fontawesome.com/ce278ed6db.js" crossorigin="anonymous"></script>
     <script src="/assets/js/main.js"></script>
 </body>
 
