fix the settings page

--- a/settings.html
+++ b/settings.html
@@ -36,7 +36,7 @@
             </div>
             <nav class="flex-1 px-3 py-4 overflow-y-auto">
                 <a href="/index.html" title="Dashboard"
-                    class="flex items-center gap-2 px-3 py-2 transition rounded hover:bg-gray-100 ">
+                    class="flex items-center gap-2 px-3 py-2 transition rounded hover:bg-gray-100">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                         class="w-5 h-5 lucide lucide-chart-column"
@@ -91,7 +91,7 @@
                                 <rect width="18" height="18" x="3" y="3" rx="2"></rect>
                                 <path d="M17 12h-2l-2 5-2-10-2 5H7"></path>
                             </svg>
-                            <span> Overall Success </span>
+                            <span>Overall Success</span>
                         </a>
                         <a href="/abandoned-by-customer.html"
                             class="flex items-center gap-2 px-3 py-1 text-sm text-gray-600 rounded hover:bg-gray-100">
@@ -258,10 +258,10 @@
                     <span class="sidebar-label">Success Rate</span>
                 </a>
                 <a href="/transactions.html" title="Transactions"
-                    class="flex items-center gap-2 px-3 py-2 text-gray-700 transition rounded sidebar-item hover:bg-gray-100">
+                    class="flex items-center gap-2 px-3 py-2 transition rounded hover:bg-gray-100 sidebar-item ">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                        class="w-5 h-5 lucide lucide-file-text" data-lov-id="src\components\Sidebar\Sidebar.tsx:114:12"
+                        class="w-5 h-5 lucide lucide-file-text " data-lov-id="src\components\Sidebar\Sidebar.tsx:114:12"
                         data-lov-name="FileText" data-component-path="src\components\Sidebar\Sidebar.tsx"
                         data-component-line="114" data-component-file="Sidebar.tsx" data-component-name="FileText"
                         data-component-content="%7B%22className%22%3A%22h-5%20w-5%22%7D">
@@ -271,10 +271,10 @@
                         <path d="M16 13H8"></path>
                         <path d="M16 17H8"></path>
                     </svg>
-                    <span class="sidebar-label">Transactions</span>
+                    <span class=" sidebar-label">Transactions</span>
                 </a>
                 <a href="/settings.html" title="Settings"
-                    class="flex items-center gap-2 px-3 py-2 font-semibold transition bg-gray-200 rounded hover:bg-gray-100 sidebar-item active">
+                    class="flex items-center gap-2 px-3 py-2 font-semibold text-gray-700 transition rounded sidebar-item active hover:bg-gray-100">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                         class="w-5 h-5 lucide lucide-settings text-[#2563EB]"
@@ -287,7 +287,7 @@
                         </path>
                         <circle cx="12" cy="12" r="3"></circle>
                     </svg>
-                    <span class="text-[#2563EB] sidebar-label ">Settings</span>
+                    <span class=" text-[#2563EB] sidebar-label">Settings</span>
                 </a>
                 <a href="/logout.html" title="Logout"
                     class="flex items-center gap-2 px-3 py-2 mt-4 text-red-500 transition rounded sidebar-item hover:bg-gray-100">
@@ -305,6 +305,7 @@
                 </a>
             </nav>
         </div>
+
         <!-- Main content -->
         <div class="flex flex-col flex-1 h-full overflow-hidden">
             <!-- Mobile Header -->
@@ -410,8 +411,8 @@
             </footer>
         </div>
     </div>
-    <script src="https://kit.fontawesome.com/ce278ed6db.js" crossorigin="anonymous"></script>
-    <script src="/assets/js/main.js"></script>
+
+    <script src="/assets/js/settings.js"></script>
 </body>
 
 </html>
