add changes in the desing

--- a/settings.html
+++ b/settings.html
@@ -330,8 +330,8 @@
                     </div>
 
                     <div class="p-4 bg-white rounded-lg md:p-6 dash-bordee ">
-                        <div class="space-y-6">
-                            <div class="pb-4 border-b">
+                        <div class="space-y-6 ">
+                            <div class="pb-4 border-b border-bottom">
                                 <h2 class="mb-2 text-lg font-medium">General Settings</h2>
                                 <p class="text-sm text-gray-500">Configure basic application settings</p>
                             </div>
@@ -386,7 +386,7 @@
                                 </div>
                             </div>
 
-                            <div class="pt-4 border-t">
+                            <div class="pt-4 border-t border-top">
                                 <button
                                     class="px-4 py-2 text-white transition-colors bg-blue-600 rounded hover:bg-blue-700">
                                     Save Settings
