--- a/settings.html
+++ b/settings.html
@@ -36,7 +36,7 @@
             </div>
             <nav class="flex-1 px-3 py-4 overflow-y-auto">
                 <a href="/index.html" title="Dashboard"
-                    class="flex items-center gap-2 px-3 py-2 transition rounded hover:bg-gray-100">
+                    class="flex items-center gap-2 px-3 py-2 text-gray-700 transition rounded sidebar-item hover:bg-gray-100">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                         class="w-5 h-5 lucide lucide-chart-column"
@@ -258,7 +258,7 @@
                     <span class="sidebar-label">Success Rate</span>
                 </a>
                 <a href="/transactions.html" title="Transactions"
-                    class="flex items-center gap-2 px-3 py-2 transition rounded hover:bg-gray-100 sidebar-item ">
+                    class="flex items-center gap-2 px-3 py-2 text-gray-700 transition rounded sidebar-item hover:bg-gray-100">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                         class="w-5 h-5 lucide lucide-file-text " data-lov-id="src\components\Sidebar\Sidebar.tsx:114:12"
@@ -271,7 +271,7 @@
                         <path d="M16 13H8"></path>
                         <path d="M16 17H8"></path>
                     </svg>
-                    <span class=" sidebar-label">Transactions</span>
+                    <span class="sidebar-label">Transactions</span>
                 </a>
                 <a href="/settings.html" title="Settings"
                     class="flex items-center gap-2 px-3 py-2 font-semibold text-gray-700 transition rounded sidebar-item active hover:bg-gray-100">
