--- a/transactions.html
+++ b/transactions.html
@@ -42,7 +42,7 @@
       </div>
       <nav class="flex-1 px-3 py-4 overflow-y-auto">
         <a href="/index.html" title="Dashboard"
-          class="flex items-center gap-2 px-3 py-2 transition rounded hover:bg-gray-100">
+          class="flex items-center gap-2 px-3 py-2 text-gray-700 transition rounded sidebar-item hover:bg-gray-100">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
             class="w-5 h-5 lucide lucide-chart-column" data-lov-id="src\components\Sidebar\Sidebar.tsx:40:12"
